4.2.5
- Enabled sorting tickets by ticket agent (responsible).
- Added an option to the email account dialog (properties panel) to choose  if clicked emails will automatically be marked as read or not.
- Billing: Added field to set the length of the order number. (how many 000 that are in front of the orderno)
- Added dropbox module
- Moved scanbox and googledrive module to pro package
- Updated French and German translation
- Fixed incorrect content length header on downloading message source
- better way of stripping non utf8 characters

24-06-2013 4.2.4
- Better memory management with sending mails.
- Updated czech language
- Fix from zoom in in on the calendar in chrome where a lot of "More.." links where shown

19-06-2013 4.2.3
- Fixes from 4.1.79

18-06-2013 4.2.2
- Improved WebDAV performance
- Calendar module: Notification about files of a private event, once the 
  checkbox 'Private' has been clicked.
- Better memory management in z-push 2 backend. Raised default max attachment 
  size to 100MB.
- Optimized Z-Push 2 ping process with ChangesSink

13-06-2013 4.2.1
- Upgrade TCPDF to 6.0.020 and changed default font to freesans because of display problem on iPad
- Upgraded SabreDAV to version 1.8.5
- HTTP Authentication for requests
- Tickets can only be deleted by users who have write or manage persmissions on the ticket system.
- Send multiple download links at once
- Permissions on start page announcements so visibility can be controlled
- Easy link checkbox to link e-mail conversations to a contact directly
- Contact photo's are shown in e-mail and can be set much more easily with download URL's.
- Custom field blocks feature
- Models show last modified by username
- In tickets a mail can also be send automatically when a ticket was just claimed
- Mail accounts can be shared read only
- Send the invitation emails in the language of the participant if the participant is a known user of GO.